# ood_audio

./: .flake8  .gitignore  LICENSE  README.rst  default.conf  pyproject.toml  requirements.txt
docs/source/: conf.py  datasets.rst  evaluation.rst  features.rst  index.rst  inference.rst  modules.rst  pytorch.rst  relabel.rst
metadata/: test.csv  training.csv
ood_audio/: cli.py  datasets.py  evaluation.py  features.py  inference.py  main.py  relabel.py  utils.py
ood_audio/pytorch/: models.py  odin.py  specaug.py  training.py  utils.py
scripts/: download_dataset.sh
scripts/icassp/: clean-da.conf  clean.conf  evaluate.sh  extract.sh  relabel-odin.conf  relabel.conf  train.sh
